Fixed Css on projects page from absolute positioning, made project titles more readable

--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -28,7 +28,7 @@
   
   .project-container:hover .overlay {
     display: block;
-    background: rgba(0, 0, 0, .3);
+    background: rgba(0, 0, 0, .8);
   }
   
   img {
@@ -42,57 +42,63 @@
   .title {
     position: relative;
     width: 500px;
-    left: 0;
     top: 120px;
-    font-weight: 700;
-    font-size: 30px;
     text-align: center;
     text-transform: uppercase;
-    color: white;
+    font-size: x-large;
+    color: #ffd700;
     z-index: 1;
     transition: top .5s ease;
+  }
+
+  .title-span {
+    display: inline-block;
+    background-color: #022c43;
+    border-radius: 5px;
+    padding: 12px 48px;
+    border: 1px solid #ffd700;
   }
   
   .project-container:hover .title {
     top: 90px;
   }
-  
+
   .button {
-    position: absolute;
-    left:-80px;
-    top: 180px;
-    width: 500px;
-    text-align: center;
+    position: relative;
+    float: left;
+    margin-top: 30%;
+    margin-left: 15%;
+    font-size: large;
     opacity: 0;
     transition: opacity .35s ease;
+    z-index: 1;
   }
   
   .button a {
-    width: 200px;
     padding: 12px 48px;
-    text-align: center;
     color: white;
     border: solid 2px white;
-    z-index: 11;
+    z-index: 1;
+    border-radius: 5px;
   }
 
   .button-code {
-    position: absolute;
-    left:80px;
-    top: 180px;
-    width: 500px;
-    text-align: center;
+    position: relative;
+    float: right;
+    margin-top: 30%;
+    margin-right: 15%;
+    font-size: large;
     opacity: 0;
     transition: opacity .35s ease;
+    z-index: 1;
   }
   
   .button-code a {
-    width: 200px;
     padding: 12px 48px;
-    text-align: center;
     color: white;
     border: solid 2px white;
-    z-index: 10;
+    z-index: 1;
+    border-radius: 5px;
   }
   
   .project-container:hover .button {
